# pdb

./: .dockerignore  .gitignore  .mcpbignore  CLAUDE.md  COVERAGE.md  MIGRATION_LANGGRAPH.md  PLUGIN_INSTALL.md  README.md  README_MCP.md  SYSTEM_PROMPT.md  USAGE_GUIDE.md  cli.py  conftest.py  pdb_research_mcp_checklist.md  pyproject.toml  requirements.txt  server.py  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: pdbmcp-fixer.md  pdbmcp-reviewer.md
adapters/: __init__.py  formatter.py  runner.py
deploy-server/: Dockerfile  README.md  deploy.sh  docker-compose.yml
deploy-server/apache/: pdb-mcp.conf
mcpb/: build_mcpb.sh  manifest.json  smoke_test.sh
models/: schemas.py
skills/pdb/: SKILL.md
skills/pdb/references/: excel_spec.md  family_map.md  filter_keywords.md
skills/pdb/scripts/: pdb
tests/: test_alphafold.py  test_binding_site.py  test_bioactivity.py  test_export.py  test_gpcrdb.py  test_ligand.py  test_literature.py  test_opentargets.py  test_pdb.py  test_sequence.py  test_server.py  test_uniprot.py
tools/: __init__.py  alphafold.py  binding_site.py  bioactivity.py  export.py  gpcrdb.py  ligand.py  literature.py  opentargets.py  parser.py  pdb.py  rcsb_search.py  sequence.py  uniprot.py
